# Raytracer

./: CMakeLists.txt  README.md
src/: Camera.h  Material.h  Primitives.h  Random.h  Window.h  main.cpp
src/Math/: Plane.h  Ray.h  common.h  math.h
src/Math/Algebra/: mat.h  operation.h  transformation.h  vec.h
